<resources>
    <string name="app_name">Github Profile Viewer</string>
    <string name="username">Username</string>
    <string name="github_profile_viewer">Hello! Welcome to \nGithub Profile Viewer</string>
    <string name="name_surname">Name Surname</string>
    <string name="short_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="long_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="followers">Followers</string>
    <string name="company">Company</string>
    <string name="link">Link</string>
    <string name="twitter">Twitter</string>
    <string name="show_repositories">Show Repositories</string>
    <string name="user_not_found">We couldn’t find any users matching</string>
    <string name="repo_name">Repo Name</string>
    <string name="publicc">Public</string>
    <string name="description">description</string>
    <string name="language">Language</string>
    <string name="star">star</string>
    <string name="repositories">Repositories</string>
    <string name="review">Start searching for the user whose profile you want to review.</string>
    <string name="ooops">Ooops!</string>
    <string name="internet_problem">There was a problem with your internet connection, please try again.</string>
    <string name="okay">Okay</string>
    <string name="following">Following</string>
    <string name="show_profile">Show Profile</string>
    <string name="no_followers">doesn\'t have any followers yet.</string>
    <string name="no_following">doesn\'t have any following yet.</string>
    <string name="no_repositories">doesn\'t have any public repositories yet.</string>
</resources>