<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/border"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/repoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/repo_name"
            android:textColor="@color/textBlue"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="sans-serif"
        android:text="@string/description"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/languageColor"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@color/green"
            app:civ_circle_background_color="@color/black"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/languageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:layout_marginStart="7dp"
            android:text="@string/language"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/baseline_star_border_24"
            android:backgroundTint="@color/starBg"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/starText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:layout_gravity="center"
            android:layout_marginStart="3dp"
            android:text="@string/star"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>