<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:lottie_rawRes="@raw/animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:scaleType="centerCrop">
    </com.airbnb.lottie.LottieAnimationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/round"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:paddingTop="10dp"
            android:text="@string/github_profile_viewer"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppinslight"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/searchUserLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/github_gray"
                app:boxBackgroundColor="@color/transparent"
                app:hintTextColor="@color/github_gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/github"
                    android:drawableEnd="@drawable/baseline_search_24"
                    android:drawablePadding="15dp"
                    android:backgroundTint="@color/transparent"
                    android:fontFamily="@font/poppinsmedium"
                    android:hint="@string/username"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/userProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:background="@drawable/round"
                android:indeterminateTint="@color/green"
                android:indeterminateTintMode="src_in"
                android:scaleX="0.5"
                android:scaleY="0.5" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp">

            <LinearLayout
                android:id="@+id/userProfileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:backgroundTint="@color/transparent"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profilePhoto"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:src="@drawable/ic_launcher_background" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/nameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinsmedium"
                            android:hint="@string/name_surname"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/usernameText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppinslight"
                            android:hint="@string/username"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/biographyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/short_lorem_ipsum"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/followerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:hint="@string/followers"
                    app:drawableStartCompat="@drawable/baseline_people_24" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/github_gray" />


                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/location"
                    app:drawableStartCompat="@drawable/baseline_location_on_24" />

                <TextView
                    android:id="@+id/emailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/email"
                    app:drawableStartCompat="@drawable/baseline_email_24" />

                <TextView
                    android:id="@+id/companyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/company"
                    app:drawableStartCompat="@drawable/baseline_business_24" />

                <TextView
                    android:id="@+id/twitterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/twitter"
                    android:inputType="textWebEditText"
                    app:drawableStartCompat="@drawable/twitter"
                    tools:ignore="TextViewEdits" />

                <TextView
                    android:id="@+id/linkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="7dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:hint="@string/link"
                    android:inputType="textWebEditText"
                    app:drawableStartCompat="@drawable/baseline_link_24"
                    tools:ignore="TextViewEdits" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/showRepositories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/round_4"
                        android:backgroundTint="@color/green"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="6dp"
                        android:text="@string/show_profile"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                    <ProgressBar
                        android:id="@+id/showRepoProgress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/round_4"
                        android:backgroundTint="@color/green"
                        android:indeterminateTint="@color/white"
                        android:indeterminateTintMode="src_in"
                        android:scaleX="0.4"
                        android:scaleY="0.4"
                        android:visibility="gone" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/userNotFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center|top"
                android:backgroundTint="@color/transparent"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="gone">

                <ImageView
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:src="@drawable/github" />

                <TextView
                    android:id="@+id/userNotFoundText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:gravity="center"
                    android:text="@string/user_not_found"
                    android:textColor="@color/black" />

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</FrameLayout>